contrast error fixed and intentional hanling error

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -108,6 +108,28 @@ nav ul {
   justify-content: space-around;
 }
 
+.li-style-nav a {
+  color: #fff;
+}
+.footer-style {
+  background-color: #0a0a0a;
+  color: #fff;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.footer-style a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.error-views {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
 /*===========================================media  queries*/
 
 @media (max-width: 580px) {
